# posebowl

./: .gitignore  .gitmodules  TODO.txt
submission/: submission.csv
submission/assets/yolov5-onnxruntime/: CMakeLists.txt
submission/assets/yolov5-onnxruntime/include/: utils.h
submission/assets/yolov5-onnxruntime/src/: detector.cpp  main.cpp  utils.cpp
